finishing notebook five

--- a/5 - Distributed Algorithms.ipynb
+++ b/5 - Distributed Algorithms.ipynb
@@ -372,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91994\n"
+      "79838\n"
      ]
     }
    ],
@@ -391,7 +391,7 @@
     "\n",
     "# App that concatenates input files into a single output file\n",
     "@App('bash', dfk)\n",
-    "def concat(inputs=[], outputs=[], stdout=\"stdout.txt\", stderr='stderr.txt'):\n",
+    "def concat(inputs=[], outputs=[], stdout=\"data/stdout.txt\", stderr='data/stderr.txt'):\n",
     "    return \"cat {0} > {1}\".format(\" \".join(inputs), outputs[0])\n",
     "\n",
     "# App that calculates the sum of values in a list of input files\n",
@@ -406,10 +406,10 @@
     "# Create 5 files with random numbers\n",
     "output_files = []\n",
     "for i in range (5):\n",
-    "     output_files.append(generate(outputs=['random-%s.txt' % i]))\n",
+    "     output_files.append(generate(outputs=['data/random-%s.txt' % i]))\n",
     "\n",
     "# Concatenate the files into a single file\n",
-    "cc = concat(inputs=[i.outputs[0] for i in output_files], outputs=[\"all.txt\"])\n",
+    "cc = concat(inputs=[i.outputs[0] for i in output_files], outputs=[\"data/all.txt\"])\n",
     "\n",
     "# Calculate the sum of the random numbers\n",
     "total = total(inputs=[cc.outputs[0]])\n",
@@ -420,14 +420,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## IV. Distributed Dataflows"
+    "## IV. Distributed Dataflows\n",
+    "When we introduced dataflows before, we mentioned that they are often parallelizable as different \"black boxes\" can run on different cores without any interaction, and without different black boxes blocking each other. In general, but not always, this is also true of dataflows in terms of distributability. If a black box in a dataflow is completely independent of another black box, you can not only parallelize them, but also you can distribute them and run them on different nodes of a machine.\n",
+    "\n",
+    "Consider the workflow we were working with in Ch. 4: ![heirarchical workflow](https://i.imgur.com/8s1CkQ2.png)\n",
+    "\n",
+    "Because of the way the arrows are set up, you can see that any black box in the same \"layer\" as another can be run in parallel, as we discussed earlier. In addition, because they are not dependent on each other, they can be easily distributed. The rng_add phase must be run after the rng section, but it can be distributed as well."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 5.4 - Doing Distributed Math With Parsl"
+    "### Example 5.4 - Doing Distributed Math With Parsl\n",
+    "In this example, we're going to use Parsl to distribute the workflow from Ch. 4. It is still true that this workflow is not really that useful for anything, but it's an interesting learning exercise, and as I said before, the hard part of writing HPC workflows is making the different bits of the workflow interact, and not designing each bit on its own. As an exercise, you could easily replace the randomization bits of this with any other application."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parsl config\n",
+    "from parsl import *\n",
+    "import logging\n",
+    "\n",
+    "ipp_config = {\n",
+    "    \"sites\": [{\n",
+    "        \"site\": \"LC_Cluster\",\n",
+    "        \"auth\": {\n",
+    "            \"channel\": \"local\"\n",
+    "        },\n",
+    "        \"execution\": {\n",
+    "            \"executor\": \"ipp\",\n",
+    "            \"provider\": \"sge\",\n",
+    "            \"script_dir\": \".scripts\",\n",
+    "            \"scriptDir\": \".scripts\",\n",
+    "            \"block\": {\n",
+    "                \"nodes\": 1,\n",
+    "                \"taskBlocks\": 1,\n",
+    "                \"walltime\": \"00:05:00\",\n",
+    "                \"initBlocks\": 1,\n",
+    "                \"minBlocks\": 0,\n",
+    "                \"maxBlocks\": 10,\n",
+    "                \"scriptDir\": \".\",\n",
+    "                \"options\": {\n",
+    "                    \"partition\": \"debug\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }],\n",
+    "    \"globals\": {\"lazyErrors\": True},\n",
+    "    \"controller\": {\"profile\": \"default\"},\n",
+    "}\n",
+    "\n",
+    "import os\n",
+    "os.environ['SGE_ROOT'] = '/local/cluster/sge'\n",
+    "\n",
+    "dfk = DataFlowKernel(config=ipp_config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86919\n"
+     ]
+    }
+   ],
+   "source": [
+    "# App that generates a random number\n",
+    "@App('bash', dfk)\n",
+    "def generate(outputs=[]):\n",
+    "    return \"echo $(( RANDOM )) &> {outputs[0]}\"\n",
+    "\n",
+    "# App that concatenates input files into a single output file\n",
+    "@App('bash', dfk)\n",
+    "def concat(inputs=[], outputs=[], stdout=\"data/stdout.txt\", stderr='data/stderr.txt'):\n",
+    "    return \"cat {0} > {1}\".format(\" \".join(inputs), outputs[0])\n",
+    "\n",
+    "# App that calculates the sum of values in a list of input files\n",
+    "@App('python', dfk)\n",
+    "def total(inputs=[]):\n",
+    "    total = 0\n",
+    "    with open(inputs[0], 'r') as f:\n",
+    "        for l in f:\n",
+    "            total += int(l)\n",
+    "    return total\n",
+    "\n",
+    "@App('python', dfk)\n",
+    "def rng_add(add_const, inputs=[]):\n",
+    "    total = 0\n",
+    "    lines = []\n",
+    "    with open(inputs[0], 'r') as f:\n",
+    "        lines = file.readlines()\n",
+    "        for line in lines:\n",
+    "            line = str(int(line) + add_const)\n",
+    "    with open(inputs[0], 'w') as f:\n",
+    "        f.writelines(lines)\n",
+    "\n",
+    "# Create 5 files with random numbers\n",
+    "output_files = []\n",
+    "for i in range (5):\n",
+    "     output_files.append(generate(outputs=['data/random-%s.txt' % i]))\n",
+    "\n",
+    "# Concatenate the files into a single file\n",
+    "cc = concat(inputs=[i.outputs[0] for i in output_files], outputs=[\"data/all.txt\"])\n",
+    "\n",
+    "# Calculate the sum of the random numbers\n",
+    "rng_add(200, inputs=[cc.outputs[0]])\n",
+    "\n",
+    "total = total(inputs=[cc.outputs[0]])\n",
+    "print (total.result())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## V. Large Scale Problems\n",
+    "Large scale HPC problems often involve more than Python code. Luckily, that other code is usually callable from the UNIX command line. Parsl supports calling arbitrary \"black box\" applications over the command line through bash apps.  Parsl’s Bash app allows you to wrap execution of external applications from the command-line as you would in a Bash shell. It can also be used to execute Bash scripts directly. To define a Bash app the wrapped Python function must return the command-line string to be executed. Any command-line invocation represented by an arbitrarily long string, can be returned by a function decorated within an `@App` of type bash to be executed. Unlike the Python app, Bash apps communicate by passing files. The decorated bash function provides the same special keyword arguments to manage input and output files."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example 5.5 - Basic HPC Dataflow\n",
+    "In this example, we're going to use these bash apps to create a simulated HPC workflow calling things from the command line. In a Parsl bash app function, there are a few special reserved keyword arguments:\n",
+    "\n",
+    "- inputs (List) : A list of strings or DataFutures\n",
+    "- outputs (List) : A list of output file paths\n",
+    "- stdout (str) : redirects STDOUT to string filename\n",
+    "- stderr (str) : redirects STDERR to string filename\n",
+    "\n",
+    "In addition, if a list of output filenames are provided via the outputs=[], a list of futures corresponding to each filename in the outputs list is made available via the outputs attribute of the app.\n"
    ]
   },
   {
@@ -435,28 +568,82 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## V. Large Scale Problems"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Example 5.5 - Basic Physics Dataflow"
+    "# Parsl config\n",
+    "from parsl import *\n",
+    "import logging\n",
+    "\n",
+    "ipp_config = {\n",
+    "    \"sites\": [{\n",
+    "        \"site\": \"LC_Cluster\",\n",
+    "        \"auth\": {\n",
+    "            \"channel\": \"local\"\n",
+    "        },\n",
+    "        \"execution\": {\n",
+    "            \"executor\": \"ipp\",\n",
+    "            \"provider\": \"sge\",\n",
+    "            \"script_dir\": \".scripts\",\n",
+    "            \"scriptDir\": \".scripts\",\n",
+    "            \"block\": {\n",
+    "                \"nodes\": 1,\n",
+    "                \"taskBlocks\": 1,\n",
+    "                \"walltime\": \"00:05:00\",\n",
+    "                \"initBlocks\": 1,\n",
+    "                \"minBlocks\": 0,\n",
+    "                \"maxBlocks\": 10,\n",
+    "                \"scriptDir\": \".\",\n",
+    "                \"options\": {\n",
+    "                    \"partition\": \"debug\"\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "    }],\n",
+    "    \"globals\": {\"lazyErrors\": True},\n",
+    "    \"controller\": {\"profile\": \"default\"},\n",
+    "}\n",
+    "\n",
+    "import os\n",
+    "os.environ['SGE_ROOT'] = '/local/cluster/sge'\n",
+    "\n",
+    "dfk = DataFlowKernel(config=ipp_config)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Contents of the unsorted.txt file:\n",
+      "36,40,87,34,97,50,39,11,11,57,64,49,76,67,89,20,75,80,82,98,10,73,50,70,8,41,75,1,7,55,4,9,6,99,69,75,81,67,58,47,32,77,13,32,64,28,89,78,27,68,11,2,65,70,75,47,31,96,7,32,20,84,3,92,33,96,81,61,43,10,13,16,64,56,89,39,81,4,31,6,93,14,34,47,27,23,56,49,71,85,56,65,68,16,11,54,10,28,64,97,\n",
+      "\n",
+      "Contents of the sorted output file:\n",
+      "1,2,3,4,4,6,6,7,7,8,9,10,10,10,11,11,11,11,13,13,14,16,16,20,20,23,27,27,28,28,31,31,32,32,32,33,34,34,36,39,39,40,41,43,47,47,47,49,49,50,50,54,55,56,56,56,57,58,61,64,64,64,64,65,65,67,67,68,68,69,70,70,71,73,75,75,75,75,76,77,78,80,81,81,81,82,84,85,87,89,89,89,92,93,96,96,97,97,98,99,\n"
+     ]
+    }
+   ],
+   "source": [
+    "@App('bash', dfk)\n",
+    "def sort(unsorted, outputs=[]):\n",
+    "    \"\"\"Call sort executable on file `unsorted`\"\"\"\n",
+    "    return \"sort -g {} > {}\".format(unsorted, outputs[0])\n",
+    "\n",
+    "s = sort(os.path.abspath(\"data/unsorted.txt\"), \n",
+    "         outputs=[os.path.abspath(\"data/sorted_c.txt\")])\n",
+    "\n",
+    "output_file = s.outputs[0].result()\n",
+    "\n",
+    "print(\"Contents of the unsorted.txt file:\")\n",
+    "with open('data/unsorted.txt', 'r') as f:\n",
+    "    print(f.read().replace(\"\\n\",\",\"))\n",
+    "    \n",
+    "print(\"\\nContents of the sorted output file:\")\n",
+    "with open(output_file, 'r') as f:\n",
+    "    print(f.read().replace(\"\\n\",\",\"))"
+   ]
   },
   {
    "cell_type": "markdown",
