--- a/7 - Benchmarking.ipynb
+++ b/7 - Benchmarking.ipynb
@@ -1,18 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Ch. 7. Benchmarking"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## I. Why Benchmark?"
+   ]
   }
  ],
  "metadata": {
