--- a/1 - What is HPC?.ipynb
+++ b/1 - What is HPC?.ipynb
@@ -34,14 +34,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Esitmated value of Pi: 3.1344 \n"
+      "Esitmated value of Pi: 3.1228 \n"
      ]
     }
    ],
@@ -93,110 +93,51 @@
    "source": [
     "### Example 1.2 - Multiplying Matrices in Parallel\n",
     "\n",
-    "Though it's not as large-scale as either of the examples mentioned above, a very applicable and useful application of parallel programming is matrix multiplication. Runtime of multiplying two _n_ by _n_ matrices is in the complexity class O(_n<sup>3</sup>_). This means that a good parallel algorithm which can make use of multiple cores for this process is very important. An example of a parallel algorithm to multiply matrices is below."
+    "Though it's not as large-scale as any of the examples mentioned above, a very applicable and useful application of parallel programming is matrix multiplication. Runtime of multiplying two _n_ by _n_ matrices is in the complexity class O(_n<sup>3</sup>_). This means that a good parallel algorithm which can make use of multiple cores for this process is very important. An example of a parallel algorithm to multiply matrices is below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Necessary definitions for matrix multiplication\n",
-    "import ctypes\n",
-    "import multiprocessing\n",
-    "import numpy\n",
+    "def matmult(a,b):\n",
+    "    zip_b = zip(*b)\n",
+    "    # uncomment next line if python 3 : \n",
+    "    # zip_b = list(zip_b)\n",
+    "    return [[sum(ele_a*ele_b for ele_a, ele_b in zip(row_a, col_b)) \n",
+    "             for col_b in zip_b] for row_a in a]\n",
     "\n",
-    "def read(filename):\n",
-    "    lines = open(filename, 'r').read().splitlines()\n",
-    "    A = []\n",
-    "    B = []\n",
-    "    matrix = A\n",
-    "    for line in lines:\n",
-    "        if line != \"\":\n",
-    "            matrix.append(map(int, line.split(\"\\t\")))\n",
-    "        else:\n",
-    "            matrix = B\n",
-    "    return A, B\n",
+    "x = [[1,2,3],[4,5,6],[7,8,9],[10,11,12]]\n",
+    "y = [[1,2],[1,2],[3,4]]\n",
     "\n",
-    "def printMatrix(matrix, f):\n",
-    "    for line in matrix:\n",
-    "        f.write(\"\\t\".join(map(str,line)) + \"\\n\")\n",
+    "import numpy as np # I want to check my solution with numpy\n",
     "\n",
-    "def lineMult(start):\n",
-    "    global A, B, mp_arr, part\n",
-    "    n = len(A)\n",
-    "    # create a new numpy array using the same memory as mp_arr\n",
-    "    arr = numpy.frombuffer(mp_arr.get_obj(), dtype=ctypes.c_int)\n",
-    "    C = arr.reshape((n,n))\n",
-    "    for i in range(start, start+part):\n",
-    "        for k in range(n):\n",
-    "            for j in range(n):\n",
-    "                C[i][j] += list(A[i])[k] * list(B[k])[j]\n",
-    "\n",
-    "def ikjMatrixProduct(A, B, threadNumber):\n",
-    "    n = len(A)\n",
-    "    \n",
-    "    pool = multiprocessing.Pool(threadNumber)\n",
-    "\n",
-    "    pool.map(lineMult, range(0, int(n), int(part)))\n",
-    "    # mp_arr and arr share the same memory\n",
-    "    arr = numpy.frombuffer(mp_arr.get_obj(), dtype=ctypes.c_int) \n",
-    "    C = arr.reshape((n,n))\n",
-    "    return C\n",
-    "\n",
-    "def extant_file(x):\n",
-    "    \"\"\"\n",
-    "    'Type' for argparse - checks that file exists but does not open.\n",
-    "    \"\"\"\n",
-    "    if not isfile(x):\n",
-    "        raise argparse.ArgumentError(\"{0} does not exist\".format(x))\n",
-    "    return x"
+    "mx = np.matrix(x)\n",
+    "my = np.matrix(y)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRemoteTraceback\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;31mRemoteTraceback\u001b[0m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/local/cluster/lib/python3.6/multiprocessing/pool.py\", line 119, in worker\n    result = (True, func(*args, **kwds))\n  File \"/local/cluster/lib/python3.6/multiprocessing/pool.py\", line 44, in mapstar\n    return list(map(*args))\n  File \"<ipython-input-60-7e5b7c37b560>\", line 31, in lineMult\n    C[i][j] += list(A[i])[k] * list(B[k])[j]\nIndexError: list index out of range\n\"\"\"",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-a4cecc005aad>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# shared, can be used from multiple processes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0mmp_arr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mArray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_int\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m \u001b[0mC\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mikjMatrixProduct\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mA\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mB\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mthreadNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m \u001b[0mprintMatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mC\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-60-7e5b7c37b560>\u001b[0m in \u001b[0;36mikjMatrixProduct\u001b[0;34m(A, B, threadNumber)\u001b[0m\n\u001b[1;32m     36\u001b[0m     \u001b[0mpool\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmultiprocessing\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mPool\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mthreadNumber\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m     \u001b[0mpool\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlineMult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpart\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m     \u001b[0;31m# mp_arr and arr share the same memory\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m     \u001b[0marr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnumpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrombuffer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmp_arr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mctypes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc_int\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/local/cluster/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mmap\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    264\u001b[0m         \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m \u001b[0mlist\u001b[0m \u001b[0mthat\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    265\u001b[0m         '''\n\u001b[0;32m--> 266\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_map_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmapstar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    267\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    268\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstarmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0miterable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mchunksize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/local/cluster/lib/python3.6/multiprocessing/pool.py\u001b[0m in \u001b[0;36mget\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    642\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    643\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 644\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_value\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    645\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    646\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_set\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[12, 18], [], [], []]\n",
+      "[[12 18]\n",
+      " [27 42]\n",
+      " [42 66]\n",
+      " [57 90]]\n"
      ]
     }
    ],
    "source": [
-    "# Run the matrix multiplication\n",
-    "\n",
-    "import argparse, sys\n",
-    "from os.path import isfile\n",
-    "from argparse import ArgumentParser\n",
-    "\n",
-    "A, B = read(\"data/matrix_mult.in\")\n",
-    "\n",
-    "n, m, p = len(A), len(list(A[0])), len(list(B[0]))\n",
-    "\n",
-    "threadNumber = 32\n",
-    "part = len(A) // threadNumber\n",
-    "if part < 1:\n",
-    "    part = 1\n",
-    "\n",
-    "# shared, can be used from multiple processes\n",
-    "mp_arr = multiprocessing.Array(ctypes.c_int, n*p)\n",
-    "C = ikjMatrixProduct(A, B, threadNumber)\n",
-    "printMatrix(C, sys.stdout)"
+    "print(matmult(x,y))\n",
+    "print(mx * my)\n"
    ]
   },
   {
@@ -217,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,14 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generated 100 strings in 0.006600379943847656 seconds\n"
+      "Generated 100 strings in 0.008857011795043945 seconds\n"
      ]
     }
    ],
@@ -619,7 +560,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 1. Write a program to compute sums of _n_ integers in parallel "
+    "## Exercise 1. Write a program to compute sums of _n_ integers in parallel \n",
+    "\n",
+    "Using your new HPC skills, write a short program that generates two random vectors of length _n_, sums them in parallel, and prints out how long it took for them to be added."
    ]
   },
   {
@@ -628,7 +571,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code goes here"
+    "# Your code goes here\n",
+    "##Notes from students\n",
+    "\n",
+    "- formatting changes \n",
+    "    - less vertically oriented\n",
+    "    - more whitespace\n",
+    "    - two column layout if possible\n",
+    "    - maybe more shorter notebooks\n",
+    "- liked examples\n",
+    "- Images with bold text stick out more than examples"
    ]
   }
  ],
